# executorch

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  base_mem_manager.h  executor.cpp  executor.h  executorch.pc.in
codegen/: Codegen.cmake  context.py  gen.py  model.py  utils.py
codegen/api/: cpp.py  dispatcher.py  meta.py  native.py  structured.py  translate.py  types.py  ufunc.py  unboxing.py
codegen/dest/: native_functions.py  register_dispatch_key.py
codegen/selective_build/: selector.py
core/: ArrayRef.h  Evalue.h  Scalar.h  Tag.h  compile_fx.py  error_message.cpp  error_message.h  instruction.h  macros.h  operator_registry.cpp  operator_registry.h  tensor.h  value.h
kernels/: README.md  control_flow_ops.cpp  demo_operator_kernels.cpp  functions.yaml  operator_kernels.cpp
kernels/templates/: DispatchKeyFunction.h  Function.h  Functions.h  NativeFunction.h  NativeFunctions.h  RegisterCodegenUnboxedKernels.cpp  RegisterDispatchKey.cpp  UnboxingFunctions.cpp  UnboxingFunctions.h
pytree/: CMakeLists.txt  pytree.cpp  pytree.h
pytree/test/: CMakeLists.txt  test_pytree.cpp
schema/: executor_schema.fbs  schema.fbs  schema_generated.h
test/: CMakeLists.txt  test_executor  test_executor.cpp  test_mem_config.h
toolchains/: arm-none-eabi-gcc.cmake
